@@ -19,7 +19,8 @@
 13. Add a 'My Music' entry, and place 'Artists', etc, within this.
 14. Allow pinning of items from 'My Music.'
 15. Always use server provided categories.
-16. Allow drag'n'drop re-ordering of top-level browse items.
+16. Allow drag'n'drop re-ordering of top-level browse items. Items are
+    auto-sorted for iPhone due to #107
 17. Allow hiding 'My Music', etc, from home screen.
 
 0.9.7
